@@ -31,7 +31,7 @@ class action_plugin_linkback_receive extends DokuWiki_Action_Plugin {
         return array (
             'author' => 'Gina Haeussge',
             'email' => 'osd@foosel.net',
-            'date' => '2008-04-06',
+            'date' => @file_get_contents(DOKU_PLUGIN.'linkback/VERSION'),
             'name' => 'Linkback Plugin (receive component)',
             'desc' => 'Injects autodiscovery-code into output.',
             'url' => 'http://wiki.foosel.net/snippets/dokuwiki/linkback',
